<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddHappyPlacesActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addHappyPlacesToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/customToolbarStyle"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/svAddPlaces"
        />

   <ScrollView
       android:id="@+id/svAddPlaces"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintTop_toBottomOf="@id/addHappyPlacesToolbar"
       android:fillViewport="true"
       android:layout_margin="@dimen/sides"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       >
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/fab_margin"
          >
          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/boxTitle"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintBottom_toTopOf="@id/boxDescription"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:backgroundTint="@color/colorTextView"
              app:boxStrokeColor="@color/colorTextViewTouch"
              app:hintTextColor="@color/colorTextViewTouch"
              app:boxCornerRadiusTopStart="@dimen/sides"
              app:boxCornerRadiusTopEnd="@dimen/sides"
              app:boxCornerRadiusBottomStart="@dimen/sides"
              app:boxCornerRadiusBottomEnd="@dimen/sides"
              >
              <EditText
                  android:id="@+id/etTitle"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/colorTextView"
                  android:textSize="@dimen/edit_text_text_size"
                  android:hint="@string/title"
                  android:textColorHint="@color/colorTextViewTouch"
                  android:inputType="text"
                  />
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/boxDescription"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/boxTitle"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:backgroundTint="@color/colorTextView"
              app:boxStrokeColor="@color/colorTextViewTouch"
              app:hintTextColor="@color/colorTextViewTouch"
              app:boxCornerRadiusTopStart="@dimen/sides"
              app:boxCornerRadiusTopEnd="@dimen/sides"
              app:boxCornerRadiusBottomStart="@dimen/sides"
              app:boxCornerRadiusBottomEnd="@dimen/sides"
              >
              <EditText
                  android:id="@+id/etDescription"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/colorTextView"
                  android:textSize="@dimen/edit_text_text_size"
                  android:hint="@string/description"
                  android:textColorHint="@color/colorTextViewTouch"
                  android:inputType="textMultiLine"
                  />
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/boxDate"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/boxDescription"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:backgroundTint="@color/colorTextView"
              app:boxStrokeColor="@color/colorTextViewTouch"
              app:hintTextColor="@color/colorTextViewTouch"
              app:boxCornerRadiusTopStart="@dimen/sides"
              app:boxCornerRadiusTopEnd="@dimen/sides"
              app:boxCornerRadiusBottomStart="@dimen/sides"
              app:boxCornerRadiusBottomEnd="@dimen/sides"
              >
              <EditText
                  android:id="@+id/etDate"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/colorTextView"
                  android:textSize="@dimen/edit_text_text_size"
                  android:hint="@string/date"
                  android:textColorHint="@color/colorTextViewTouch"
                  android:inputType="date"
                  android:focusableInTouchMode="false"
                  />
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/boxLocation"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/boxDate"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              android:backgroundTint="@color/colorTextView"
              app:boxStrokeColor="@color/colorTextViewTouch"
              app:hintTextColor="@color/colorTextViewTouch"
              app:boxCornerRadiusTopStart="@dimen/sides"
              app:boxCornerRadiusTopEnd="@dimen/sides"
              app:boxCornerRadiusBottomStart="@dimen/sides"
              app:boxCornerRadiusBottomEnd="@dimen/sides"
              >
              <EditText
                  android:id="@+id/etLocation"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/colorTextView"
                  android:textSize="@dimen/edit_text_text_size"
                  android:hint="@string/location"
                  android:textColorHint="@color/colorTextViewTouch"
                  android:inputType="textPostalAddress"
                  />
          </com.google.android.material.textfield.TextInputLayout>
          <androidx.appcompat.widget.AppCompatImageView
              android:id="@+id/iv_place_image"
              android:layout_width="@dimen/add_screen_place_image_size"
              android:layout_height="@dimen/add_screen_place_image_size"
              android:layout_marginTop="@dimen/add_screen_place_image_marginTop"
              android:background="@drawable/shape_image_view_border"
              android:padding="@dimen/add_screen_place_image_padding"
              android:scaleType="centerCrop"
              android:src="@drawable/add_screen_image_placeholder"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.0"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/boxLocation" />

          <TextView
              android:id="@+id/tv_add_image"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/add_screen_text_add_image_marginTop"
              android:background="?attr/selectableItemBackground"
              android:gravity="center"
              android:padding="@dimen/add_screen_text_add_image_padding"
              android:text="@string/add_image"
              android:textColor="@color/colorPrimary"
              android:textSize="@dimen/add_screen_text_add_image_textSize"
              android:textStyle="bold"
              app:layout_constraintBottom_toTopOf="@+id/btn_save"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.45"
              app:layout_constraintStart_toEndOf="@+id/iv_place_image"
              app:layout_constraintTop_toBottomOf="@+id/boxLocation"
              app:layout_constraintVertical_bias="0.019" />

          <Button
              android:id="@+id/btn_save"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="@dimen/add_screen_btn_save_marginTop"
              app:backgroundTint="@null"
              android:background="@drawable/shape_button_rounded"
              android:gravity="center"
              android:paddingTop="@dimen/add_screen_btn_save_paddingTopBottom"
              android:paddingBottom="@dimen/add_screen_btn_save_paddingTopBottom"
              android:text="@string/save"
              android:textColor="@color/white"
              android:textSize="@dimen/btn_text_size"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/iv_place_image" />

      </androidx.constraintlayout.widget.ConstraintLayout>

   </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>